# job-cd

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
job_cd/: main.py
job_cd/cli/: app.py  commands.py  interactive.py  wrappers.py
job_cd/core/: config.py  io.py  models.py  pipeline.py
job_cd/providers/: cache.py  composer.py  database.py  extractor.py  finder.py  intake.py  sender.py
tests/: test_api_health.py  test_cli.py  test_config.py  test_providers.py
